[gd_scene load_steps=10 format=3 uid="uid://drejmah8lp647"]

[ext_resource type="Script" path="res://scripts/inventory/interface/slot.gd" id="1_wncw0"]
[ext_resource type="Texture2D" uid="uid://drtik47nntpts" path="res://icons/rarity_slot_03.svg" id="2_j241b"]
[ext_resource type="Texture2D" uid="uid://do5r8eoebvwer" path="res://icons/rarity_slot_01.svg" id="2_t2i2u"]
[ext_resource type="Texture2D" uid="uid://clbhnxabwhhn0" path="res://icons/rarity_slot_02.svg" id="3_qll7c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4e25u"]
bg_color = Color(1, 1, 1, 0)
border_width_top = 5
border_color = Color(0.490196, 0.0980392, 0.592157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnoc3"]
bg_color = Color(1, 1, 1, 0)
border_width_top = 5
border_color = Color(0.117647, 0.243137, 0.494118, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yrev"]
bg_color = Color(1, 1, 1, 0)
border_width_top = 5
border_color = Color(0.113725, 0.372549, 0.494118, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0a35"]
bg_color = Color(1, 1, 1, 0.0588235)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyc21"]
bg_color = Color(1, 1, 1, 0)
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Slot" type="PanelContainer" node_paths=PackedStringArray("rarity_unpopular_texture", "rarity_rare_texture", "rarity_top_texture", "active_slot_panel", "hover_panel")]
custom_minimum_size = Vector2(58, 58)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_wncw0")
rarity_unpopular_texture = NodePath("UnpopularRarity")
rarity_rare_texture = NodePath("RareRarity")
rarity_top_texture = NodePath("TopRarity")
active_slot_panel = NodePath("ActiveSlotPanel")
hover_panel = NodePath("HoverPanel")

[node name="Regular" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[node name="Unpopular" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.705882)
layout_mode = 2
texture = ExtResource("2_j241b")
expand_mode = 2

[node name="Rare" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.705882)
layout_mode = 2
texture = ExtResource("3_qll7c")
expand_mode = 2

[node name="Top" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 4.335)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_t2i2u")
expand_mode = 2

[node name="TopRarity" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4e25u")

[node name="RareRarity" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jnoc3")

[node name="UnpopularRarity" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4yrev")

[node name="HoverPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i0a35")

[node name="ActiveSlotPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oyc21")

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Amount" type="Label" parent="MarginContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "x99"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5

[node name="SlotNumber" type="Label" parent="MarginContainer2"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "1"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
